Expand UnifiedSystemTray when volume key pressed.

Previously, volume slider was missing when UnifiedSystemTray was
collapsed and volume key was pressed.
This CL ensures UnifiedSystemTray to be expanded when volume key is
pressed.

TEST=manual
BUG=855508

Change-Id: Ia1408082a74a9b11a6a7802849c9dc391cf601a8
Reviewed-on: https://chromium-review.googlesource.com/1114520
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570652}
Former-commit-id: 14388d9c204ada820cb742069e7c40ec3c75e579